@@ -3,6 +3,7 @@
 * Add permission to allow user to create other disabled users
 * Add event for when a disabled user is created
 * Add permission to allow user to send email to a mailing list
+* Fix bug where audit events were not being purged
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
